--- a/index.html
+++ b/index.html
@@ -16,15 +16,14 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-6  col-sm-6 col-md-5 col-lg-5 text-center vertical-align" id='output'>
-
                 <h2 id="Location" class="text"></h2>
-                <h1 class="text"><span id="city">Get Your Local Weather<span></h1>
-                <h6 class="text" style="display:inline">Lat: <span id='lat'><span></h6>
-                <h6 class="text" style="display:inline"> Lon: <span id='lon'> <span></h6>
-                <h2 class="text"><span id = 'genweather'><span></h2>
-                <h1 class="text">Temp: <span id = 'current'><span></h1>
-                <p class="text" style="display:inline">Min: <span id='min'> <span></p>
-                <p class="text" style="display:inline"> Max: <span id='max'> <span></p>
+                <h1 class="text"><span id="city">Get Your Local Weather</span></h1>
+                <h6 class="text" style="display:inline">Lat: <span id='lat'></span></h6>
+                <h6 class="text" style="display:inline"> Lon: <span id='lon'></span></h6>
+                <h2 class="text"><span id = 'genweather'></span></h2>
+                <h1 class="text">Temp: <span id = 'current'></span></h1>
+                <p class="text" style="display:inline">Min: <span id='min'> </span></p>
+                <p class="text" style="display:inline"> Max: <span id='max'></span></p>
                 <button class = "btn center-block" id="cf">Alternate Units</button>
             </div>
         </div>
