CSS background fix

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" type="text/css"
           href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"/>
-    <link rel="stylesheet" type="text/css" src="styles.css"/>
+    <link rel="stylesheet" type="text/css" href="styles.css"/>
     <title>Your Weather</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
 <div class="jumbotron" id='backimage'>
     <div class="container">
         <div class="row">
-            <div class="col-xs-6  col-sm-6 col-md-5 col-lg-5 text-center vertical-align" id='output'>
+            <div class="col-xs-12  col-sm-10 col-md-8 col-lg-5 text-center vertical-align" id='output'>
                 <h2 id="Location" class="text"></h2>
                 <h1 class="text"><span id="city">Get Your Local Weather</span></h1>
                 <h6 class="text" style="display:inline">Lat: <span id='lat'></span></h6>
